--- a/apricot clone/index.css
+++ b/apricot clone/index.css
@@ -20,7 +20,7 @@ body{
 }
 
 img{
-    z-index: 0;
+    z-index:0;
 }
 .header-item{
  font-size: 15px;
@@ -48,3 +48,106 @@ img{
 
 
 }
+#cross{
+    transition: ease-in-out 0.3ws;
+}
+.side-header {
+    position: fixed;
+    top: 0;
+    left: -250px; /* Start it off-screen */
+    width: 250px;
+    height: 100%;
+    background-color: #333; /* Adjust background color */
+    transition: left 0.3s ease; /* Add a smooth slide-in transition */
+    z-index: 999; /* Ensure it's above other content */
+}
+
+.sidenav {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #ffffff; /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000000;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Position and style the close button (top right corner) */
+  .sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+  #main {
+    transition: margin-left .5s;
+    padding: 20px;
+  }
+  #img-type:hover #img{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -5px 15px;
+    border: 20px;
+    transition: 0.7s ease-in-out;
+}
+#img-type:hover #img-type-text{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -5px 15px;
+    border: 20px;
+    transition: 0.7s ease-in-out;
+}
+  
+  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+  @media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
+  @media  (min-width:1px) and (max-width: 800px) {
+    #navbar-icon{
+        display: flex !important;
+    }
+    #row-navbar{
+        display: none !important;
+    }
+    .img-2{
+        width: 100vw !important;
+
+    }
+    .section-2{
+        display: inline-block !important;
+    }
+    #img-2-text{
+        display: block !important;
+    }
+    #img-2{
+        width: 99vw !important;
+    }
+    #btn-img{
+        font-size: 16px !important;
+         width: 25px !important;
+    }
+
+
+
+ }
+
+  
+
